fix box-shadow of posts preview on mobile

--- a/src/components/css/main.css
+++ b/src/components/css/main.css
@@ -52,6 +52,11 @@
     cursor: pointer;
     width: 40%;
     margin-top: 49px !important;
+  }
+}
+
+@media all and (min-width: 1025px) {
+  .blog-content .post {
     transition: box-shadow 0.3s linear;
   }
 
